--- a/docs/.vitepress/theme/style/index.css
+++ b/docs/.vitepress/theme/style/index.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Roboto+Mono:wght@400;500;600;700&family=Ubuntu+Mono:wght@400;700&display=swap");
+@import "./blur.css";
+@import "./hidden.css";
+@import "./vp-code.css";
+@import "./vp-code-group.css";
 
 :root {
     --monospace: "JetBrains Mono", "Roboto Mono", "Noto Sans SC", "Fira Code",
